fix(sonar): usar record pattern + Math.clamp no controller